[project]
name = "odoo-addons-oca-operating-unit"
version = "17.0.20240719.1"
dependencies = [
    "odoo-addon-analytic_operating_unit>=17.0dev,<17.1dev",
    "odoo-addon-operating_unit>=17.0dev,<17.1dev",
    "odoo-addon-product_operating_unit>=17.0dev,<17.1dev",
    "odoo-addon-res_partner_operating_unit>=17.0dev,<17.1dev",
    "odoo-addon-sales_team_operating_unit>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
