[project]
name = "odoo-addons-oca-operating-unit"
version = "17.0.20240830.0"
dependencies = [
    "odoo-addon-account_financial_report_operating_unit>=17.0dev,<17.1dev",
    "odoo-addon-account_operating_unit>=17.0dev,<17.1dev",
    "odoo-addon-account_operating_unit_access_all>=17.0dev,<17.1dev",
    "odoo-addon-analytic_operating_unit>=17.0dev,<17.1dev",
    "odoo-addon-analytic_operating_unit_access_all>=17.0dev,<17.1dev",
    "odoo-addon-contract_operating_unit>=17.0dev,<17.1dev",
    "odoo-addon-contract_operating_unit_access_all>=17.0dev,<17.1dev",
    "odoo-addon-crm_operating_unit>=17.0dev,<17.1dev",
    "odoo-addon-hr_operating_unit>=17.0dev,<17.1dev",
    "odoo-addon-mail_operating_unit>=17.0dev,<17.1dev",
    "odoo-addon-operating_unit>=17.0dev,<17.1dev",
    "odoo-addon-operating_unit_access_all>=17.0dev,<17.1dev",
    "odoo-addon-pos_operating_unit>=17.0dev,<17.1dev",
    "odoo-addon-product_operating_unit>=17.0dev,<17.1dev",
    "odoo-addon-project_operating_unit>=17.0dev,<17.1dev",
    "odoo-addon-res_partner_operating_unit>=17.0dev,<17.1dev",
    "odoo-addon-sale_operating_unit>=17.0dev,<17.1dev",
    "odoo-addon-sale_stock_operating_unit>=17.0dev,<17.1dev",
    "odoo-addon-sales_team_operating_unit>=17.0dev,<17.1dev",
    "odoo-addon-stock_operating_unit>=17.0dev,<17.1dev",
    "odoo-addon-stock_operating_unit_access_all>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
